Fix the controlbar on IOS

--- a/src/index.css
+++ b/src/index.css
@@ -14,6 +14,7 @@ body {
   display: flex;
   flex-direction: column;
   flex-grow: 1;
+  background-color: #000;
 }
 
 code {
